<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/mushrooms"
              android:gravity="center">

    <Button android:id="@+id/start_game"
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            android:text="@string/menu_start_game"/>

    <Button android:id="@+id/join"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/menu_join"
            android:layout_below="@id/start_game"/>

    <Button android:id="@+id/quit"
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            android:text="@string/menu_quit"
            android:layout_below="@id/join"/>
        
</RelativeLayout>