<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10dp">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:text="@string/game_over"
              android:textSize="25dp"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:text="@string/results"
              android:textSize="15dp"
              android:layout_marginTop="10dp"/>

    <ListView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/winners_list"/>

    <Button android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/ok"
            android:onClick="goToMainMenu"/>

</LinearLayout>