<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="5dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_name_of_game"
            android:layout_gravity="left|center_vertical"/>

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_name_of_game"
            android:id="@+id/name_of_new_game"
            android:layout_marginBottom="10dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_number_of_players"
            android:layout_gravity="left|center_vertical"/>

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_number_of_players"
            android:id="@+id/number_of_players"
            android:inputType="number"
            android:layout_marginBottom="10dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:layout_gravity="left|center_vertical"/>

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_user"
            android:id="@+id/new_user"
            android:layout_marginBottom="10dp"/>

    <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:id="@+id/new_game_ok"
            android:layout_gravity="center"
            android:onClick="startNewGame"/>
</LinearLayout>