<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="5dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:layout_gravity="left|center_vertical"/>

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_user"
            android:id="@+id/new_user"
            android:layout_marginBottom="10dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_choose"
            android:layout_gravity="left|center_vertical"/>

    <Spinner
            android:id="@+id/found_games"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:visibility="gone"/>

    <ProgressBar
            android:id="@+id/looking_for_games"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

    <Button
            android:id="@+id/join_ok"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:onClick="joinButtonClicked"/>
</LinearLayout>